2004-04-17 Julien Puydt <julien.puydt@laposte.net>

	* src/callbacks.cpp, src/druid.cpp, src/ils.cpp, src/ldap_window.cpp,
	src/menu.cpp, src/misc.cpp, src/pref_window.cpp, src/tools.cpp,
	src/tray.cpp: changed some if () return; to g_return_if_fail();

2004-04-17 Julien Puydt <julien.puydt@laposte.net>

	* src/calls_history_window.*: moved the internal representation
	from the .h to the .cpp.

2004-04-17 Julien Puydt <julien.puydt@laposte.net>

	* src/calls_history_window.cpp, src/ldap_window.cpp,
	src/main_window.cpp: Made drag'n drop use the GmContact type.
	
2004-04-16  Damien Sandras  <dsandras@gnome.org>

        * lib/contacts/gm_contacts-eds.cpp, 
        lib/contacts/gm_contacts.h: Cosmetic changes + bugfix suggested
        by Julien.

2004-04-16  Damien Sandras  <dsandras@gnome.org>

        * lib/contacts/gm_contacts-eds.cpp, lib/contacts/gm_contacts.h:
        Updated API.

        * src/addressbook_window.cpp: Code cleanups.

2004-04-16  Damien Sandras  <dsandras@gnome.org>

        * lib/contacts/gm_contacts-eds.cpp, lib/contacts/gm_contacts.h:
        Added 2 more functions to the API.

2004-04-16  Damien Sandras  <dsandras@gnome.org>

        * lib/gm_contacts-eds.c, lib/gm_contacts-eds.h, lib/gm_contacts.h:
        Removed those files as they are moved in a separate directory for 
        C++ compilation and for cleanliness. Moved common code to
        gm_contacts.h that will be shared between the different backends.
        Extended the API to something more complete.

        * lib/contacts/Makefile.am, lib/contacts/gm_contacts-eds.cpp, 
        lib/contacts/gm_contacts.h: See above.
        
        * configure.in, lib/Makefile.am: Added lib/contacts/ to the build.

        * src/addressbook_window.cpp: Adapted to the other changes.

2004-04-15  Damien Sandras  <dsandras@seconix.com>

        * src/addressbook_window.cpp: More work on the GUI for selective
        searches.

2004-04-15  Damien Sandras  <dsandras@seconix.com>
