@@ -1,3 +1,10 @@
+2004-04-17  Damien Sandras  <dsandras@gnome.org>
+
+        * src/addressbook_window.cpp: More work to be able to add users.
+        
+        * src/gnomemeeting.cpp, src/gnomemeeting.h: Added convenience
+        function to get the GmAddressbookWindow.
+
 2004-04-17 Julien Puydt <julien.puydt@laposte.net>
 
 	* src/callbacks.cpp, src/druid.cpp, src/ils.cpp, src/ldap_window.cpp,
@@ -14,7 +21,7 @@
 	* src/calls_history_window.cpp, src/ldap_window.cpp,
 	src/main_window.cpp: Made drag'n drop use the GmContact type.
 	
-2004-04-16  Damien Sandras  <dsandras@gnome.org>
+2004-04-17  Damien Sandras  <dsandras@gnome.org>
 
         * lib/contacts/gm_contacts-eds.cpp, 
         lib/contacts/gm_contacts.h: Cosmetic changes + bugfix suggested
